fix(chip-set): resolve z-index issues by using css `isolation`
fix: Lundalogik/lime-elements#1864

--- a/src/style/internal/z-index.scss
+++ b/src/style/internal/z-index.scss
@@ -1,4 +1,3 @@
-$chip-set--hidden-text-field: -100 !default;
 $date-picker--flatpickr-adapter--datepicker-x-container--selected: 1 !default;
 $date-picker--flatpickr-adapter--datepicker-x-container--hover: 1 !default;
 $date-picker--flatpickr-adapter--datepicker-x--after: -1 !default;
